[project]
name = "dpo-v2"
version = "0.1.0"
description = "Full-parameter SFT & DPO pipeline with FSDP"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1,<3",
    "transformers>=4.37.0",
    "datasets>=2.16.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0",
    "tensorboard>=2.15.0",
]

[tool.uv]
package = false
